# hokkaido-nandoku-webapp

./: .gitignore  DEVELOPMENT.md  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml
.gemini/commands/: speckit.analyze.toml  speckit.checklist.toml  speckit.clarify.toml  speckit.constitution.toml  speckit.implement.toml  speckit.plan.toml  speckit.specify.toml  speckit.tasks.toml
specs/001-hokkaido-nandoku-quiz/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-hokkaido-nandoku-quiz/checklists/: requirements.md
specs/001-hokkaido-nandoku-quiz/contracts/: api.yaml
specs/002-bedrock-quiz-options/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bedrock-quiz-options/checklists/: requirements.md
specs/003-cache-bedrock-options/: data-model.md  quickstart.md  research.md  spec.md
specs/003-cache-bedrock-options/checklists/: requirements.md
specs/003-cache-bedrock-options/contracts/: cache-api.yaml
specs/004-modern-quiz-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-modern-quiz-ui/checklists/: requirements.md
specs/004-modern-quiz-ui/contracts/: api.yaml
specs/0_hokkaido-nandoku-quiz/: data-model.md
src/: bedrock_client.py  main.py  requirements.txt
src/templates/: index.html
templates/: index.html
terraform/: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  Makefile  README.md  REFACTORING_SUMMARY.md  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/modules/api_gateway/: README.md  main.tf  outputs.tf  (+1 more)
tests/: test_bedrock_client.py  test_main.py
(+12 files in other folders)
