[project]
name = "hokkaido-nandoku-webapp"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "httpx",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
